Litt opprydding i navn og metoder.
* Tatt vekk ubrukte enums.

* Lagt til enhanced switches.

* Endret en log til å printe warning når vi ikke finner orgnr.